@@ -1,9 +1,10 @@
 TODO
 ====
-1. Do testu pridat kazde znameni zverokruhu.
 2. Implementovat zodiac2angle()
 3. Prejmenovat? Ve skutecnosti je to position_of_planet_in_zodiac?
 4.
 
 Applied
 =======
+1. Do testu pridat kazde znameni zverokruhu.
+OK [20201019] skim
